--- a/advanced03/index.html
+++ b/advanced03/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="iwdth=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Advanced Tamplate</title>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Ropa+Sans">
   <link rel="stylesheet" href="./css/normalize.css">
