--- a/advanced03/index.html
+++ b/advanced03/index.html
@@ -44,7 +44,7 @@
       
 <!--      <img src="./img/logo.png" alt="Shiftbrain" height="65" width="200">-->
        <div class="sub">
-         RWD design
+         RWD 02
        </div>
       
       </a>
