--- a/basic03/index.html
+++ b/basic03/index.html
@@ -29,7 +29,7 @@
   </header>
   <header class="page-header" role="banner">
     <div class="inner2">
-      <div class="subject">RWD design</div>
+      <div class="subject">RWD 01</div>
       <div class="nav-box">
         <div class="nav"><a href="">About</a></div>
         <div class="nav"><a href="">Work</a></div>
