--- a/bootstrap02/index.html
+++ b/bootstrap02/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js" lang="ja">
 
 <head>
-  <title>Bootstrap 01</title>
+  <title>Bootstrap 02</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
   <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Ropa+Sans">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/main.css">
-  <link rel="stylesheet" href="./styles/myStyle.css">
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/mainBS.css">
+  <link rel="stylesheet" href="./css/myStyle.css">
+  <script src="./js/vendor/modernizr.custom.min.js"></script>
+  <script src="./js/vendor/jquery-1.10.2.min.js"></script>
+  <script src="./js/main.js"></script>
 </head>
 
 <body>
-  <div class="jumbotron">
-    <div class="container">
-      <h1>Find a place to stay.</h1>
-      <p>Rent from people in over 34,000 cities and 192 countries.</p>
-      <a href="#">Learn More</a>
+  <header class="hero-header">
+    <div class="inner">
+      <div class="slideshow">
+        <img src="./img/slide-1.jpg" alt="" width="1600" height="465">
+        <img src="./img/slide-2.jpg" alt="" width="1600" height="465">
+        <img src="./img/slide-3.jpg" alt="" width="1600" height="465">
+        <img src="./img/slide-4.jpg" alt="" width="1600" height="465">
+      </div>
     </div>
-  </div>
+  </header>
   <div class="nav">
     <div class="nav2">
       <ul class="pull-left">
-        <li><a href="#">Bootstrap design 01</a></li>
+        <li><a href="#">Bootstrap design 02</a></li>
         <!--        <li><a href="#">Browse</a></li>-->
       </ul>
       <ul class="pull-right">
         <li><a href="#">About</a></li>
         <li><a href="#">Work</a></li>
-        <li><a href="#">BLog</a></li>
+        <li><a href="#">Blog</a></li>
         <li><a href="#">Recruit</a></li>
       </ul>
     </div>
@@ -118,7 +125,6 @@
       </div>
     </div>
   </div>
-
   <!--  footer -->
   <footer class="page-footer">
     <div class="inner clearfix">
