--- a/bootstrap05/index.html
+++ b/bootstrap05/index.html
@@ -2,27 +2,31 @@
 <html class="no-js" lang="ja">
 
 <head>
-  <title>Bootstrap03</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+  <title>Chapter 05-02 &#xB7; jQuery 最高の教科書</title>
+  <!--  -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
-  <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-
+  <!--  <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">-->
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Ropa+Sans">
+  <!-- CSS  -->
   <link rel="stylesheet" href="./css/normalize.css">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/bootstrap.css">
+  <link rel="stylesheet" href="./css/mainCS.css">
+  <link rel="stylesheet" href="./css/mainSH.css">
   <link rel="stylesheet" href="./css/mainBS.css">
   <link rel="stylesheet" href="./css/myStyle.css">
+  <!-- JS -->
   <script src="./js/vendor/modernizr.custom.min.js"></script>
   <script src="./js/vendor/jquery-1.10.2.min.js"></script>
   <script src="./js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
-  <script src="./js/main.js"></script>
+  <script src="./js/mainCS.js"></script>
+  <script src="./js/mainSH.js"></script>
 </head>
 
 <body>
-  <!-- slide show -->
+  <!-- banner/ carousel-->
   <div class="slideshow">
     <div class="slideshow-slides">
       <a href="./" class="slide" id="slide-1"><img src="./img/slide-1.jpg" alt="" width="1600" height="465"></a>
@@ -36,22 +40,23 @@
     </div>
     <div class="slideshow-indicator"></div>
   </div>
-  <!--  nav bar -->
-  <div class="nav">
-    <div class="nav2">
-      <ul class="pull-left">
-        <li><a href="#">Bootstrap design 03</a></li>
-        <!--        <li><a href="#">Browse</a></li>-->
-      </ul>
-      <ul class="pull-right">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">BLog</a></li>
-        <li><a href="#">Recruit</a></li>
-      </ul>
+
+  <!--  sticky header -->
+  <header class="page-header" role="banner">
+    <div class="inner">
+      <h1 class="site-logo"><a href="./"><img src="./img/logo.png" alt="Shiftbrain" height="65" width="200"></a></h1>
+      <nav class="primary-nav" role="navigation">
+        <ul>
+          <li><a href="./">About</a></li>
+          <li><a href="./">Work</a></li>
+          <li><a href="./">Blog</a></li>
+          <li><a href="./">Recruit</a></li>
+          <!--          <li><a href="./">Contact</a></li>-->
+        </ul>
+      </nav>
     </div>
-  </div>
-  <!--  contents -->
+  </header>
+  <!--  contents  -->
   <div class="neighborhood-guides">
     <div class="container">
       <!--
