--- a/bootstrap04/index.html
+++ b/bootstrap04/index.html
@@ -5,9 +5,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Chapter 05-02 &#xB7; jQuery 最高の教科書</title>
+  <!--  -->
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
+  <!--  <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">-->
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Ropa+Sans">
+  <!-- CSS  -->
   <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/bootstrap.css">
   <link rel="stylesheet" href="./css/mainCS.css">
   <link rel="stylesheet" href="./css/mainSH.css">
+  <link rel="stylesheet" href="./css/mainBS.css">
+  <link rel="stylesheet" href="./css/myStyle.css">
+  <!-- JS -->
   <script src="./js/vendor/modernizr.custom.min.js"></script>
   <script src="./js/vendor/jquery-1.10.2.min.js"></script>
   <script src="./js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
@@ -46,7 +56,95 @@
       </nav>
     </div>
   </header>
-
+  <!--  contents  -->
+  <div class="neighborhood-guides">
+    <div class="container">
+      <!--
+      <h2>Neighborhood Guides</h2>
+      <p>
+        Not sure where to stay? We've created neighborhood guides for cities all around the world.
+      </p>
+-->
+      <div class="row">
+        <div class='col-md-4'>
+          <div class="thumbnail">
+            <img src="http://goo.gl/0sX3jq">
+          </div>
+          <!--
+          <div class="thumbnail">
+            <img src="http://goo.gl/an2HXY">
+          </div>
+-->
+          <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos accusamus, cum amet error vitae reprehenderit beatae atque, dolorum commodi aspernatur voluptatibus officia animi deserunt aut deleniti nesciunt dicta hic sint!</div>
+        </div>
+        <div class='col-md-4'>
+          <div class="thumbnail">
+            <img src="http://goo.gl/Av1pac">
+          </div>
+          <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos accusamus, cum amet error vitae reprehenderit beatae atque, dolorum commodi aspernatur voluptatibus officia animi deserunt aut deleniti nesciunt dicta hic sint!</div>
+        </div>
+        <div class='col-md-4'>
+          <!--
+<div class="thumbnail">
+  <img src="http://goo.gl/0Kd7UO">
+</div>
+-->
+          <div class="thumbnail">
+            <img src="http://goo.gl/vw43v1">
+          </div>
+          <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos accusamus, cum amet error vitae reprehenderit beatae atque, dolorum commodi aspernatur voluptatibus officia animi deserunt aut deleniti nesciunt dicta hic sint!</div>
+        </div>
+      </div>
+      <!--  2nd row  -->
+      <div class="row">
+        <div class='col-md-4'>
+          <div class="thumbnail">
+            <img src="https://placem.at/things?w=360&h=165&random=1">
+          </div>
+          <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos accusamus, cum amet error vitae reprehenderit beatae atque, dolorum commodi aspernatur voluptatibus officia animi deserunt aut deleniti nesciunt dicta hic sint!</div>
+        </div>
+        <div class='col-md-4'>
+          <div class="thumbnail">
+            <img src="https://placem.at/things?w=360&h=165&random=2">
+          </div>
+          <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos accusamus, cum amet error vitae reprehenderit beatae atque, dolorum commodi aspernatur voluptatibus officia animi deserunt aut deleniti nesciunt dicta hic sint!</div>
+        </div>
+        <div class='col-md-4'>
+          <div class="thumbnail">
+            <img src="https://placem.at/things?w=360&h=165&random=3">
+          </div>
+          <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos accusamus, cum amet error vitae reprehenderit beatae atque, dolorum commodi aspernatur voluptatibus officia animi deserunt aut deleniti nesciunt dicta hic sint!</div>
+        </div>
+      </div>
+      <!--  3rd row  -->
+      <div class="row">
+        <div class='col-md-4'>
+          <div class="thumbnail">
+            <img src="https://placem.at/things?w=360&h=165&random=4">
+          </div>
+          <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos accusamus, cum amet error vitae reprehenderit beatae atque, dolorum commodi aspernatur voluptatibus officia animi deserunt aut deleniti nesciunt dicta hic sint!</div>
+        </div>
+        <div class='col-md-4'>
+          <div class="thumbnail">
+            <img src="https://placem.at/things?w=360&h=165&random=5">
+          </div>
+          <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos accusamus, cum amet error vitae reprehenderit beatae atque, dolorum commodi aspernatur voluptatibus officia animi deserunt aut deleniti nesciunt dicta hic sint!</div>
+        </div>
+        <div class='col-md-4'>
+          <div class="thumbnail">
+            <img src="https://placem.at/things?w=360&h=165&random=6">
+          </div>
+          <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos accusamus, cum amet error vitae reprehenderit beatae atque, dolorum commodi aspernatur voluptatibus officia animi deserunt aut deleniti nesciunt dicta hic sint!</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--  footer -->
+  <footer class="page-footer">
+    <div class="inner clearfix">
+      <div class="copyright">Copyright © AaronHsu</div>
+    </div>
+  </footer>
 </body>
 
 </html>
